<resources>
    <string name="app_name">AppContactSalon</string>
    <string name="title_inscription">Inscription</string>
    <string name="field_firstname">Prénom</string>
    <string name="hint_firstname">Prénom</string>
    <string name="field_lastname">Nom</string>
    <string name="hint_lastname">Nom</string>
    <string name="field_birthdate">Date de naissance</string>
    <string name="hint_birthdate">Date de naissance</string>
    <string name="field_address">Adresse</string>
    <string name="hint_address">Adresse</string>
    <string name="field_city">Ville</string>
    <string name="hint_city">Ville</string>
    <string name="field_postalcode">Code postal</string>
    <string name="hint_postalcode">Code postal</string>
    <string name="field_phone">Téléphone fixe</string>
    <string name="hint_phone">Téléphone fixe</string>
    <string name="field_mobilephone">Téléphone mobile</string>
    <string name="hint_mobilephone">Téléphone mobile</string>
    <string name="field_email">Email</string>
    <string name="hint_email">Email</string>
    <string name="field_chosencourse">Formation souhaitée</string>
    <string name="hint_chosencourse">Formation souhaitée</string>
    <string name="field_lastdiploma">Dernier diplôme obtenu</string>
    <string name="hint_lastdiploma">Dernier diplôme obtenu</string>
    <string name="field_coursetype">Formation</string>
    <string name="field_coursetypeinitial">En initial</string>
    <string name="field_coursetypealternance">En alternance</string>
    <string-array name="field_chosencourse">
        <item>BTS SIO SLAM</item>
        <item>Développeur Logiciel Bac+2</item>
        <item>Concepteur développeur d'applications Bac+3</item>
        <item>Analyste Développeur Bac+4</item>
        <item>Architecte Technique en Informatique et Réseaux Bac+4/5</item>
        <item>Master STL avec Sorbonne Université, Bac+5</item>
        <item>BTS SIO SISR</item>
        <item>Administrateur d'infrastructures sécurisées Bac+3</item>
        <item>Architecte Technique en Informatique et Réseaux Bac+4/5</item>
        <item>Master STL- SCIENCES ET TECHNOLOGIES DU LOGICIEL Bac+5</item>
        <item>BTS COMPTABILITÉ ET GESTION - BTS CG Bac+2</item>
        <item>GESTIONNAIRE PAIE Bac+2</item>
        <item>DIPLÔME COMPTABILITÉ ET GESTION – DCG Bac+3</item>
        <item>DIPLÔME SUPÉRIEUR DE COMPTABILITÉ ET DE GESTION – DSCG</item>
    </string-array>
    <string name="button_cancel">Annuler</string>
    <string name="button_save">Soumettre</string>
    <string name="button_delete">Supprimer</string>
    <string name="item_student_nom">Nom</string>
    <string name="item_student_prenom">Prénom</string>
    <string name="item_salon">Salon</string>

    <string name="title_addsalon">Créer un salon</string>
    <string name="field_libelle">Libelle</string>
    <string name="hint_libelle">Libelle du salon</string>
    <string name="field_date">Date</string>
    <string name="hint_date">Date du salon</string>


</resources>