<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_inscription"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/field_firstname"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_firstname"
                    android:importantForAutofill="yes"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/field_lastname"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/hint_lastname"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/field_birthdate"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTextBirthDate"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_birthdate"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/field_address"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTextAdress"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/field_city"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTextCity"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_city"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/field_postalcode"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTextPostalCode"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_postalcode"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/field_phone"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/field_mobilephone"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTextMobilePhone"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mobilephone"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/field_email"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/field_chosencourse"
                    android:textSize="18sp"/>

                <Spinner
                    android:id="@+id/spinnerChosenCourse"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/hint_chosencourse"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/field_lastdiploma"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTextLastDiploma"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_lastdiploma"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/field_coursetype"
                    android:textSize="18sp"/>
                <RadioGroup
                    android:id="@+id/radioGroupCourseType"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/radioButtonInitial"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/field_coursetypeinitial"
                        android:textSize="18sp"/>

                    <RadioButton
                        android:id="@+id/radioButtonAlternance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/field_coursetypealternance"
                        android:textSize="18sp"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#E91E63"
                    android:layout_margin="5dp"
                    android:text="@string/button_cancel"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/button_save"
                    android:textAlignment="center"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#E91E63"
                    android:layout_margin="5dp"
                    android:text="@string/button_delete"
                    android:textAlignment="center"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
