<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="28dp"
        android:layout_marginVertical="20dp"
        android:text="@string/title_addsalon" />

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/field_libelle" />

        <EditText
            android:id="@+id/editTextAddLibelle"
            android:hint="@string/hint_libelle"
            android:importantForAutofill="yes"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Date:" />

        <EditText
            android:id="@+id/editTextAddDate"
            android:hint="@string/hint_date"
            android:importantForAutofill="yes"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="datetime" />

    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/button_delete"
            android:textAlignment="center"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/button_addsalon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/button_save"
            android:textAlignment="center"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>